[package]
name = "solana-tokens"
description = "Blockchain, Rebuilt for Scale"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
version = "1.8.14"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-tokens"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33.0"
console = "0.14.1"
csv = "1.1.3"
ctrlc = { version = "3.1.5", features = ["termination"] }
dirs-next = "2.0.0"
indexmap = "1.5.1"
indicatif = "0.15.0"
pickledb = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
solana-account-decoder = { git = "https://github.com/solindex/account-decoder.git", version = "=1.8.14" }
solana-clap-utils = { git = "https://github.com/solindex/clap-utils.git", version = "=1.8.14" }
solana-cli-config = { git = "https://github.com/solindex/cli-config.git", version = "=1.8.14" }
solana-client = { git = "https://github.com/solindex/client.git", version = "=1.8.14" }
solana-remote-wallet = { git = "https://github.com/solindex/remote-wallet.git", version = "=1.8.14" }
solana-runtime = { git = "https://github.com/solindex/runtime.git", version = "=1.8.14" }
solana-sdk = { git = "https://github.com/solindex/sdk.git", version = "=1.8.14" }
solana-transaction-status = { git = "https://github.com/solindex/transaction-status.git", version = "=1.8.14" }
solana-version = { git = "https://github.com/solindex/version.git", version = "=1.8.14" }
spl-associated-token-account = { package = "spl-associated-token-account", version = "=1.0.3" }
spl-token = { version = "=3.2.0", features = ["no-entrypoint"] }
tempfile = "3.1.0"
thiserror = "1.0"

[dev-dependencies]
bincode = "1.3.1"
solana-core = { git = "https://github.com/solindex/core.git", version = "=1.8.14" }
solana-logger = { git = "https://github.com/solindex/logger.git", version = "=1.8.14" }
solana-program-test = { git = "https://github.com/solindex/program-test.git", version = "=1.8.14" }
solana-streamer = { git = "https://github.com/solindex/streamer.git", version = "=1.8.14" }
